# sendgrid-cli

./: .bumpversion.cfg  README.md  pyproject.toml
sendgrid_cli/: __init__.py  cli.py
